# RKK2

./: CMakeLists.txt  CPack.cmake
.github/workflows/: CI.yml
tests/: tests.cpp
